[project]
name = "med-inventory-env"
version = "1.0.0"
description = "OpenEnv medical inventory environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "httpx>=0.27.0",
    "openai>=1.30.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
